--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -86,5 +86,9 @@
             <a href="https://instagram.com"><img src="images/instagram.png" alt="Instagram"></a>
             </nav>
     </footer>
+    <script>
+        const date = new Date(document.lastModified);
+        document.getElementById("demo").innerHTML = date.getFullYear();
+    </script>
 </body>
 </html>
