--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -47,8 +47,8 @@
         <div class="address">
             <div class="add-phone">
                 <address>
-                    "507 Delafield Ave,"<br>
-                    "Richland, WA 99352"
+                    "Columbia Plateau Trail,"<br>
+                    "Pasco, WA 99301"
                 </address>
                 <a href="tel:123 456-5678">(123) 456-5678</a>
                 <a href="mailto:info@whitewaterraftingco.com">email: info@whitewaterraftingco.com</a>
