--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -58,16 +58,16 @@
         <hr class="hrule">
         <div class="grid employees">
             <figure class="employee">
-                <img src="" alt="">
-                <figcaption></figcaption>
+                <img src="images/ceo.png" alt="CEO">
+                <figcaption>CEO</figcaption>
             </figure>
             <figure class="employee">
                 <img src="" alt="">
                 <figcaption></figcaption>
             </figure>
             <figure class="employee">
-                <img src="" alt="">
-                <figcaption></figcaption>
+                <img src="images/guide.png" alt="guide">
+                <figcaption>Lead Guide</figcaption>
             </figure>
         </div>
     </main>
