--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -62,12 +62,12 @@
                 <figcaption>CEO</figcaption>
             </figure>
             <figure class="employee">
-                <img src="" alt="">
-                <figcaption></figcaption>
+                <img src="images/sales.png" alt="sales rep">
+                <figcaption>Sales Rep</figcaption>
             </figure>
             <figure class="employee">
                 <img src="images/guide.png" alt="guide">
-                <figcaption>Lead Guide</figcaption>
+                <figcaption>Lead Tour Guide</figcaption>
             </figure>
         </div>
     </main>
