--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -49,7 +49,7 @@
                     "Columbia Plateau Trail,"<br>
                     "Pasco, WA 99301"
                 </address>
-                <a href="tel:123 456-5678">(123) 456-5678</a>
+                <a href="tel:123456-5678">(123) 456-5678</a>
                 <a href="mailto:info@whitewaterraftingco.com">email: info@whitewaterraftingco.com</a>
             </div>
             <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d35035.97740498233!2d-118.8723029551935!3d46.252010952774164!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x549881f7d6e6c4fd%3A0xf39189d80f562720!2sNorth%20Shore%20Recreation%20Area%20and%20Boat%20Ramp!5e0!3m2!1sen!2sus!4v1716693888723!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
