--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -11,7 +11,6 @@
     <body>
         <header>
             <h1>Rafting Site Plan</h1>
-            <div>Jacquelyn Kulmus</div>
         </header>
         <main>
             <h2>Overview</h2>
@@ -35,7 +34,7 @@
             <img src="images/river-rafting-logo.png" alt="Rafting Site Logo">
 
             <h2>Style Guide</h2>
-            
+
 
             <h3>Color Palette</h3>
             
@@ -46,11 +45,11 @@
             <h3>Typography</h3>
             <h4>Headings Example Font</h4>
             <p>
-                <a href=""></a>
+                <a href="styles/site-plan-rafting.css"></a>
             </p>
             <h4>Normal Text/Paragraph Example Font</h4>
             <p>
-                <a href=""></a>
+                <a href="styles/site-plan-rafting.css"></a>
             </p>
             <h4>Colored Callout Example Font</h4>
             <p></p>
