--- a/wwr/about.html
+++ b/wwr/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>About Us | White Water Rafting Co</title>
+    <title>About Us | The Rapids</title>
     <meta name="description" content="About Us page">
     <meta name="author" content="Jacquelyn Kulmus">
     <link rel="stylesheet" href="styles/rafting.css">
