--- a/wwr/about.html
+++ b/wwr/about.html
@@ -73,7 +73,7 @@
             <span id="demo">2024</span>
             White Water Rafting Co | Jacquelyn Kulmus
         </p>
-        <a href="#open-modal" class="footer-menu">Wirefram</a>
+        <a href="#open-modal" class="footer-menu">Wireframe</a>
         <nav class="sociallinks">
             <a href="https://facebook.com"><img src="images/facebook.png" alt="Facebook"></a>
             <a href="https://twitter.com"><img src="images/twitter.png" alt="Twitter"></a>
