--- a/wwr/about.html
+++ b/wwr/about.html
@@ -7,6 +7,9 @@
     <meta name="description" content="About Us page">
     <meta name="author" content="Jacquelyn Kulmus">
     <link rel="stylesheet" href="styles/rafting.css">
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100..900&family=Shadows+Into+Light&display=swap');
+        </style>
 </head>
 <body>
     <header>
@@ -23,7 +26,7 @@
     <main>
         <div class="hero">
             <img src="images/hero.png" alt="Hero Image">
-            <h1 class="abs-heading1">White Water Rafting Co</h1>
+            <h1 class="abs-heading1">The Rapids</h1>
             <article class="abs-article">
                 <img src="images/hero-article.png" alt="happy client">
                 <p>
