--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -7,6 +7,9 @@
         <meta name="description" content="The rafting site plan includes the site purpose, the target audience, branding information, and a style guide for the course website project.">
         <meta name="author" content="Jacquelyn Kulmus">
         <link rel="stylesheet" href="styles/site-plan-rafting.css">
+        <style>
+            @import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100..900&family=Shadows+Into+Light&display=swap');
+            </style>
     </head>
     <body>
         <header>
