--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -77,7 +77,7 @@
         <p>
             &copy; 
             <span id="demo">2024</span>
-            White Water Rafting Co | Jacquelyn Kulmus
+            The Rapids | Jacquelyn Kulmus
         </p>
         <a href="#open-modal" class="footer-menu">Wirefram</a>
         <nav class="sociallinks">
