--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -7,6 +7,9 @@
     <meta name="description" content="Trips page">
     <meta name="author" content="Jacquelyn Kulmus">
     <link rel="stylesheet" href="styles/rafting.css">
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100..900&family=Shadows+Into+Light&display=swap');
+        </style>
 </head>
 <body>
     <header>
@@ -74,9 +77,9 @@
         <p>
             &copy; 
             <span id="demo">2024</span>
-            White Water Rafting Co | Jacquelyn Kulmus
+            The Rapids | Jacquelyn Kulmus
         </p>
-        <a href="#open-modal" class="footer-menu">Wirefram</a>
+        <a href="#open-modal" class="footer-menu">wwr-wireframe-home</a>
         <nav class="sociallinks">
             <a href="https://facebook.com"><img src="images/facebook.png" alt="Facebook"></a>
             <a href="https://twitter.com"><img src="images/twitter.png" alt="Twitter"></a>
