--- a/wwr/about.html
+++ b/wwr/about.html
@@ -74,7 +74,7 @@
         <p>
             &copy; 
             <span id="demo">2024</span>
-            White Water Rafting Co | Jacquelyn Kulmus
+            The Rapids | Jacquelyn Kulmus
         </p>
         <a href="#open-modal" class="footer-menu">Wireframe</a>
         <nav class="sociallinks">
