--- a/wwr/about.html
+++ b/wwr/about.html
@@ -7,9 +7,7 @@
     <meta name="description" content="About Us page">
     <meta name="author" content="Jacquelyn Kulmus">
     <link rel="stylesheet" href="styles/rafting.css">
-    <style>
-        @import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100..900&family=Shadows+Into+Light&display=swap');
-        </style>
+    
 </head>
 <body>
     <header>
@@ -76,7 +74,7 @@
             <span id="demo">2024</span>
             The Rapids | Jacquelyn Kulmus
         </p>
-        <a href="#open-modal" class="footer-menu">Wireframe</a>
+        <a href="#open-modal" class="footer-menu">wwr-wireframe-home</a>
         <nav class="sociallinks">
             <a href="https://facebook.com"><img src="images/facebook.png" alt="Facebook"></a>
             <a href="https://twitter.com"><img src="images/twitter.png" alt="Twitter"></a>
