--- a/wwr/about.html
+++ b/wwr/about.html
@@ -7,7 +7,9 @@
     <meta name="description" content="About Us page">
     <meta name="author" content="Jacquelyn Kulmus">
     <link rel="stylesheet" href="styles/rafting.css">
-    
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100..900&family=Shadows+Into+Light&display=swap');
+        </style>
 </head>
 <body>
     <header>
