--- a/wwr/about.html
+++ b/wwr/about.html
@@ -28,14 +28,15 @@
                 <img src="images/hero-article.png" alt="happy client">
                 <p>
                     "Hief ienifni idsi tidf i filkjsj kjhgdj
-                    hddf kjyui fghdd sgfuj hkjuk hjghgd.
+                    hddf kjyui fghdd sgfuj hkjuk hjghgd."
                 </p>
             </article>
         </div>
         <section class="history">
             <h2>History</h2>
-            <p>kljfdkld djkfjl jfiel n fowenlk dkjh hwuhej jdfhk.
-                dhwj kjsdf owjdhts skjthn skjdf.
+            <p>
+                "kljfdkld djkfjl jfiel n fowenlk dkjh hwuhej jdfhk.
+                dhwj kjsdf owjdhts skjthn skjdf."
             </p>
             <img src="images/history.jpg" alt="History">
             <p>
