--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -31,8 +31,8 @@
                 <select name="reason" id="reason">
                     <option value selected disabled>--Please select One --</option>
                     <option value="general">General Inquiry</option>
-                    <option value="reservation">Reservation Question </option>
-                    <option value="suggestion">Website Suggestion/option></option>
+                    <option value="reservation">Reservation Question</option>
+                    <option value="suggestion">Website Suggestion</option>
                 </select>
                 <label for="comment">Please enter your comment:</label>
                 <textarea name="comment" id="comment" cols="35" rows="10"></textarea>
