--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -24,18 +24,18 @@
         <img src="images/hero.png" alt="little" class="con-hero">
         <form action="#" class="contact">
                 <label for="name">Name:</label>
-                <input type="text" id="name" name="from">
+                <input type="text" id="name" name="from" required>
                 <label for="email">e-Mail</label>
-                <input type="email" name="email" id="email">
+                <input type="email" name="email" id="email" required>
                 <label for="reason">Reason for contacting us?</label>
-                <select name="reason" id="reason">
-                    <option value selected disabled>--Please select One --</option>
+                <select name="reason" id="reason" required>
+                    <option value="" selected disabled>--Please select one --</option>
                     <option value="general">General Inquiry</option>
                     <option value="reservation">Reservation Question</option>
                     <option value="suggestion">Website Suggestion</option>
                 </select>
                 <label for="comment">Please enter your comment:</label>
-                <textarea name="comment" id="comment" cols="35" rows="10"></textarea>
+                <textarea name="comment" id="comment" cols="35" rows="10" required></textarea>
                 <div class="signup">
                     <input type="checkbox" name="subscribe" id="newsletter">
                     <label for="newsletter">Please subscribe me to the monthly newsletter</label>
