--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -75,7 +75,8 @@
             <span id="demo">2024</span>
             The Rapids | Jacquelyn Kulmus
         </p>
-        <a href="#open-modal" class="footer-menu">wwr-wireframe-home</a>
+        <a href="#open-modal" class="footer-menu">Wireframe</a>
+        <link rel="stylesheet" href="images/contact-us.png">
         <nav class="sociallinks">
             <a href="https://facebook.com"><img src="images/facebook.png" alt="Facebook"></a>
             <a href="https://twitter.com"><img src="images/twitter.png" alt="Twitter"></a>
