--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -7,6 +7,13 @@
     <meta name="description" content="Contact Us page">
     <meta name="author" content="Jacquelyn Kulmus">
     <link rel="stylesheet" href="styles/rafting.css">
+    <style>
+        .map-container {
+            width: 600px;
+            height: 450px;
+            border: 0;
+        }
+    </style>
 </head>
 <body>
     <header>
