--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -42,13 +42,6 @@
                 <input type="text" id="name" name="from" required>
                 <label for="email">e-Mail</label>
                 <input type="email" name="email" id="email" required>
-                <label for="reason">Reason for contacting us?</label>
-                <select name="reason" id="reason" required>
-                    <option value="" selected disabled>--Please select one --</option>
-                    <option value="general">General Inquiry</option>
-                    <option value="reservation">Reservation Question</option>
-                    <option value="suggestion">Website Suggestion</option>
-                </select>
                 <label for="comment">Please enter your comment:</label>
                 <textarea name="comment" id="comment" cols="35" rows="10" required></textarea>
                 <div class="signup">
@@ -59,14 +52,14 @@
         </form>
         <div class="address">
             <div class="add-phone">
-                <address>
-                    "Columbia Plateau Trail,"<br>
-                    "Pasco, WA 99301"
-                </address>
-                <a href="tel:123456-5678">(123) 456-5678</a>
-                <a href="mailto:info@therapids.com">email: info@therapids.com</a>
+            <address>
+                "Columbia Plateau Trail,"
+                <br>
+                "Pasco, WA 99301"
+            </address>
+            <a href="tel:123456-5678">(123) 456-5678</a>
+            <a href="mailto:info@therapids.com">email: info@therapids.com</a>
             </div>
-        <div>
             <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d94093.9764838609!2d-118.89566584524927!3d46.24192461797518!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x549881f7d6e6c4fd%3A0xf39189d80f562720!2sNorth%20Shore%20Recreation%20Area%20and%20Boat%20Ramp!5e0!3m2!1sen!2sus!4v1717194473359!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
         <hr class="hrule">
