--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -24,7 +24,7 @@
         <img src="images/hero.png" alt="little" class="con-hero">
         <form action="#" class="contact">
             <fieldset>
-                <legend>Purpose of Contact</legend>
+                <h1>Purpose of Contact</h1>
                 <label>
                     <input type="radio" name="purpose" value="general" required>
                     General Inquiry
