--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -32,25 +32,30 @@
         <div class="trips grid">
             <h2>Featured</h2>
             <figure class="trip">
-                <img src="images/trip1" alt="trip 1">
-                <figcaption>Trip 1</figcaption>
+                <img src="images/snake river.jpg" alt="snake river">
+                <figcaption>Snake River Excursion</figcaption>
             </figure>
             <p class="trip-details">
-                "Trip 1 details"
+                "Trip on Snake River"
             </p>
             <figure class="trip">
-                <img src="images/trip2" alt="trip 2">
-                <figcaption>Trip 2</figcaption>
+                <img src="images/tieton.jpg" alt="tieton">
+                <figcaption>Tieton River Rapids</figcaption>
             </figure>
             <p class="trip-details">
-                "Trip 2 details"
+                "Only avaiable in Septermber. This trip runs around 3-4 hours and 
+                takes you through some of the best class III-IV rapids in
+                our area. The Tieton River is one of the steepest raftable 
+                rivers in Washington. Join us for an experience you will
+                never forget!"
             </p>
             <figure class="trips">
-                <img src="images/trip3" alt="trip 3">
-                <figcaption>Trip 3</figcaption>
+                <img src="images/gorge" alt="gorge">
+                <figcaption>Columbia River Gorge</figcaption>
             </figure>
             <p class="trip-details">
-                "Trip 3 details"
+                "Whitewater rafting in the Gorge. Choose between our gentle,
+                scenic tours and our most extreme Class V rafting trips."
             </p>
         </div>
         <section class="other-adventures">
@@ -82,7 +87,7 @@
                 </tbody>
             </table>
         </section>
-        <div class="contact">
+        <div class="contact-info">
             <address>
                 "Columbia Plateau Trail,"<br>
                 "Pasco, WA 99301"
