--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -98,12 +98,12 @@
     </main>
     <footer>
         <p>&copy; <span>2024 | The Rapids | Jacquelyn Kulmus</span></p>
+        <a href="file:///C:/Users/jacqu/Documents/BYUI/Web%20Development130/wdd130/wwr/images/Trips.webp" target="_blank">wireframe</a>
         <nav class="sociallinks">
             <a href="https://facebook.com"><img src="images/facebook.png" alt="Facebook"></a>
             <a href="https://twitter.com"><img src="images/twitter.png" alt="Twitter"></a>
             <a href="https://instagram.com"><img src="images/instagram.png" alt="Instagram"></a>
             </nav>
-            <a href="" target="_blank">wireframe</a>
     </footer>
 </body>
 </html>
