--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -24,12 +24,11 @@
         </nav>
     </header>
     <main>
-        <div class="booknow">
-            <h1>ADVENTURE AWAITS YOU</h1>
-            <a href="contact.html" target="_blank"></a>
+        <div class="adventure">
+            <h1 class="trip-heading1">ADVENTURE AWAITS YOU</h1>
         </div>
         <hr class="hrule">
-        <div class="trips grid">
+        <section class="featured">
             <h2>Featured</h2>
             <figure class="trip">
                 <img src="images/snake river.jpg" alt="snake river">
@@ -50,14 +49,14 @@
                 never forget!"
             </p>
             <figure class="trips">
-                <img src="images/gorge" alt="gorge">
+                <img src="images/gorge.jpg" alt="gorge">
                 <figcaption>Columbia River Gorge</figcaption>
             </figure>
             <p class="trip-details">
                 "Whitewater rafting in the Gorge. Choose between our gentle,
                 scenic tours and our most extreme Class V rafting trips."
             </p>
-        </div>
+        </section>
         <section class="other-adventures">
             <h2>Our Adventures</h2>
             <table class="trips-table">
