--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -30,32 +30,42 @@
         <hr class="hrule">
         <section class="featured">
             <h2>Featured</h2>
-            <figure class="trip">
-                <img src="images/snake river.jpg" alt="snake river">
-                <figcaption>Snake River Excursion</figcaption>
-            </figure>
-            <p class="trip-details">
-                "Trip on Snake River"
-            </p>
-            <figure class="trip">
-                <img src="images/tieton.jpg" alt="tieton">
-                <figcaption>Tieton River Rapids</figcaption>
-            </figure>
-            <p class="trip-details">
-                "Only avaiable in Septermber. This trip runs around 3-4 hours and 
-                takes you through some of the best class III-IV rapids in
-                our area. The Tieton River is one of the steepest raftable 
-                rivers in Washington. Join us for an experience you will
-                never forget!"
-            </p>
-            <figure class="trips">
-                <img src="images/gorge.jpg" alt="gorge">
-                <figcaption>Columbia River Gorge</figcaption>
-            </figure>
-            <p class="trip-details">
-                "Whitewater rafting in the Gorge. Choose between our gentle,
-                scenic tours and our most extreme Class V rafting trips."
-            </p>
+            <div class="grid trips">
+                <div class="trip-wrapper">
+                    <figure class="trip">
+                        <img src="images/snake river.jpg" alt="snake river">
+                        <figcaption>Snake River Excursion</figcaption>
+                    </figure>
+                    <p class="trip-details">
+                        "Experience an exhilarating whitewater rafting trip through
+                        scenic rapids in the Snake River. This excurions is perfect
+                        for groups of all sizes and levels of experience."
+                    </p>
+                </div>
+                <div class="trip-wrapper">
+                    <figure class="trip">
+                        <img src="images/tieton.jpg" alt="tieton">
+                        <figcaption>Tieton River Rapids</figcaption>
+                    </figure>
+                    <p class="trip-details">
+                        "Only avaiable in Septermber. This trip runs around 3-4 hours and 
+                        takes you through some of the best class III-IV rapids in
+                        our area. The Tieton River is one of the steepest raftable 
+                        rivers in Washington. Join us for an experience you will
+                        never forget!"
+                    </p>
+                </div>
+                <div class="trip-wrapper">
+                    <figure class="trips">
+                        <img src="images/gorge.jpg" alt="gorge">
+                        <figcaption>Columbia River Gorge</figcaption>
+                    </figure>
+                    <p class="trip-details">
+                        "Whitewater rafting in the Gorge. Choose between our gentle,
+                        scenic tours and our most extreme Class V rafting trips."
+                    </p>
+                </div>
+            </div>
         </section>
         <section class="other-adventures">
             <h2>Our Adventures</h2>
