--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -102,6 +102,9 @@
                 </tbody>
             </table>
         </section>
+        <div class="book-now">
+            <button>Book Now</button>
+        </div>
         <div class="contact-info">
             <address>
                 "Columbia Plateau Trail,"<br>
