--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -29,7 +29,7 @@
         </div>
         <hr class="hrule">
         <section class="featured">
-            <h2>Featured</h2>
+            <h2>Featured Trips</h2>
             <div class="grid trips">
                 <div class="trip-wrapper">
                     <figure class="trip">
@@ -79,15 +79,15 @@
                 <thead>
                     <tr>
                         <th scope="col">Trip</th>
-                        <th scope="col">When</th>
+                        <th scope="col">Season</th>
                         <th scope="col">Price</th>
                     </tr>
                 </thead>
                 <tbody>
                     <tr>
-                        <th scope="row">Day Trip</th>
-                        <td>Month</td>
-                        <td>$$$</td>
+                        <th scope="row">Beginner Whitewater Rafting</th>
+                        <td>All Year</td>
+                        <td>$75/person</td>
                     </tr>
                     <tr>
                         <th scope="row">2 Day Trip</th>
@@ -104,6 +104,7 @@
         </section>
         <div class="book-now">
             <button>Book Now</button>
+            <a href="contact.html"></a>
         </div>
         <div class="contact-info">
             <address>
