--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -86,25 +86,27 @@
                 <tbody>
                     <tr>
                         <th scope="row">Beginner Whitewater Rafting</th>
-                        <td>All Year</td>
+                        <td>Spring - Early Fall</td>
                         <td>$75/person</td>
                     </tr>
                     <tr>
-                        <th scope="row">2 Day Trip</th>
-                        <td>Month</td>
-                        <td>$$$</td>
+                        <th scope="row">Full Day Trip</th>
+                        <td>Summer</td>
+                        <td>$100+/person</td>
                     </tr>
                     <tr>
-                        <th scope="row">5 Day Trip</th>
-                        <td>Month</td>
-                        <td>$$$</td>
+                        <th scope="row">White Salmon</th>
+                        <td>August</td>
+                        <td>$80/person</td>
                     </tr>
                 </tbody>
             </table>
         </section>
         <div class="book-now">
             <button>Book Now</button>
-            <a href="contact.html"></a>
+            <nav>
+                <a href="contact.html"></a>
+            </nav>
         </div>
         <div class="contact-info">
             <address>
