--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -73,6 +73,12 @@
                 </div>
             </div>
         </section>
+        <div class="book-now">
+            <button>Book Now</button>
+            <nav>
+                <a href="contact.html"></a>
+            </nav>
+        </div>
         <section class="other-adventures">
             <h2>Our Adventures</h2>
             <table class="trips-table">
@@ -102,12 +108,6 @@
                 </tbody>
             </table>
         </section>
-        <div class="book-now">
-            <button>Book Now</button>
-            <nav>
-                <a href="contact.html"></a>
-            </nav>
-        </div>
         <div class="contact-info">
             <address>
                 "Columbia Plateau Trail,"<br>
@@ -119,12 +119,12 @@
     </main>
     <footer>
         <p>&copy; <span>2024 | The Rapids | Jacquelyn Kulmus</span></p>
-        <a href="file:///C:/Users/jacqu/Documents/BYUI/Web%20Development130/wdd130/wwr/images/Trips.webp" target="_blank">wireframe</a>
+        <a href="#open-modal" class="footer-menu">Wireframe</a>        
         <nav class="sociallinks">
             <a href="https://facebook.com"><img src="images/facebook.png" alt="Facebook"></a>
             <a href="https://twitter.com"><img src="images/twitter.png" alt="Twitter"></a>
             <a href="https://instagram.com"><img src="images/instagram.png" alt="Instagram"></a>
-            </nav>
+        </nav>
     </footer>
 </body>
 </html>
