--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -105,15 +105,24 @@
                         <td>August</td>
                         <td>$80/person</td>
                     </tr>
+                    <tr>
+                        <th scope="row">Rafting Adventure with Lunch</th>
+                        <td>Spring - Fall</td>
+                        <td>$40/person</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">3-Day Adventure</th>
+                        <td>Summer</td>
+                        <td>$100/person</td>
+                    </tr>
                 </tbody>
             </table>
         </section>
         <div class="contact-info">
-            <address>
-                "Columbia Plateau Trail,"<br>
-                "Pasco, WA 99301"
-            </address>
-            <a href="tel:123456-5678">(123) 456-5678</a>
+            <contact>
+                Contact Us: <br>
+            </contact>
+            <a href="tel:123456-5678">Phone: (123) 456-5678</a> <br>
             <a href="mailto:info@therapids.com">email: info@therapids.com</a>
         </div>
     </main>
