--- a/wwr/index.html
+++ b/wwr/index.html
@@ -22,51 +22,38 @@
     </header>
     <main>
         <section class="hero">
-            <img src="images/rafting-adventure" alt="Rafting Adventure">
+            <img src="images/rafting-adventure.jpg" alt="Rafting Adventure">
             <h1>Welcome to The Rapids</h1>
-            <article class="abs-article">
-                <img src="images/hero-article.png" alt="happy client">
-                <p>
-                    "Hief ienifni idsi tidf i filkjsj kjhgdj
-                    hddf kjyui fghdd sgfuj hkjuk hjghgd."
-                </p>
-            </article>
-        </div>
-        <section class="history">
-            <h2>History</h2>
-            <p>
-                "kljfdkld djkfjl jfiel n fowenlk dkjh hwuhej jdfhk.
-                dhwj kjsdf owjdhts skjthn skjdf."
-            </p>
-            <img src="images/history.jpg" alt="History">
-            <p>
-                "kjdfh e jwknkjf kjdfw kjbs ejktkksb. asjkfhejht skjd skjeb
-                sdjfh.dh fjdhs fhskje siej ksjethhs."
-            </p>
         </section>
-        <section class="adventures">
-            <h2>Adventure Awaits You!</h2>
-            <figure>
-                <img src="images/wwr1.jpg" alt="White Water Rafting 1">
-                <figcaption>A Big One</figcaption>
-            </figure>
-            <figure>
-                <img src="images/wwr2.jpg" alt="White Water Rafting 2">
-                <figcaption>Having Fun</figcaption>
-            </figure>
-            <figure>
-                <img src="images/wwr3.jpg" alt="White Water Rafting 3">
-                <figcaption>Working Together</figcaption>
-            </figure>                
-            <figure>
-                <img src="images/wwr4.jpg" alt="White Water Rafting 4">
-                <figcaption>A Full Load</figcaption>
-            </figure>
-            <figure>
-                <img src="images/wwr5.jpg" alt="White Water Rafting 5">
-                <figcaption>Beautiful River</figcaption>
-            </figure>
+
+        <section class="newsletter">
+            <h2>Subscribe to Our Newsletter</h2>
+            <form action="submit_form.php" method="post">
+                <input type="text" name="name" placeholder="Your Name" required>
+                <input type="email" name="email" placeholder="Your Email" required>
+                <button type="sumbit">Subscribe</button>
+            </form>
         </section>
+            
+        <section class="call-to-action">
+            <h2>Ready for an Adventure</h2>
+            <p>"Explore our exciting rafting trips!</p>
+            <a href="trips.html" class="btn">View Trips</a>
+        </section>
+
+        <section class="grid-layout">
+            <div class="grid-item">
+                <img src="images/adventure-1.jpg" alt="adventure-1">
+                <h2>Adventure Awaits</h2>
+                <p>Description of adventures</p>
+            </div>
+            <div class="grid-item">
+                <img src="images/adventure-2.jpg" alt="adventure-2">
+                <h2>Thrilling Experience</h2>
+                <p>Description of Adventure 2</p>
+            </div>
+        </section>
+
     </main>
     <footer>
         <p>
@@ -74,7 +61,7 @@
             <span id="demo">2024</span>
             The Rapids | Jacquelyn Kulmus
         </p>
-        <a href="#open-modal" class="footer-menu">wwr-wireframe-home</a>
+        <a href="images/" class="footer-menu">View Wireframe</a></p>
         <nav class="sociallinks">
             <a href="https://facebook.com"><img src="images/facebook.png" alt="Facebook"></a>
             <a href="https://twitter.com"><img src="images/twitter.png" alt="Twitter"></a>
