--- a/wwr/index.html
+++ b/wwr/index.html
@@ -43,14 +43,20 @@
 
         <section class="grid-layout">
             <div class="grid-item">
-                <img src="images/adventure-1.jpg" alt="adventure-1">
+                <img src="images/snakeriver.jpg" alt="adventure-1">
                 <h2>Adventure Awaits</h2>
-                <p>Description of adventures</p>
+                <p>"Experience an exhilarating whitewater rafting trip through
+                    scenic rapids in the Snake River. This excurions is perfect
+                    for groups of all sizes and levels of experience."</p>
             </div>
             <div class="grid-item">
-                <img src="images/adventure-2.jpg" alt="adventure-2">
+                <img src="images/tieton.jpg" alt="adventure-2">
                 <h2>Thrilling Experience</h2>
-                <p>Description of Adventure 2</p>
+                <p>"Only avaiable in Septermber. This trip runs around 3-4 hours and 
+                    takes you through some of the best class III-IV rapids in
+                    our area. The Tieton River is one of the steepest raftable 
+                    rivers in Washington. Join us for an experience you will
+                    never forget!"</p>
             </div>
         </section>
 
