--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -76,7 +76,7 @@
         <div class="book-now">
             <button>Book Now</button>
             <nav>
-                <a href="contact.html"></a>
+                <a href="contact.html" class="contact">View Contact Us</a>
             </nav>
         </div>
         <section class="other-adventures">
