--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -128,7 +128,7 @@
     </main>
     <footer>
         <p>&copy; <span>2024 | The Rapids | Jacquelyn Kulmus</span></p>
-        <a href="#open-modal" class="footer-menu">Wireframe</a>        
+        <a href="images/Trips.webp" class="footer-menu">Wireframe</a>        
         <nav class="sociallinks">
             <a href="https://facebook.com"><img src="images/facebook.png" alt="Facebook"></a>
             <a href="https://twitter.com"><img src="images/twitter.png" alt="Twitter"></a>
