--- a/wwr/index.html
+++ b/wwr/index.html
@@ -22,8 +22,10 @@
     </header>
     <main>
         <section class="hero">
-            <img src="images/rafting-adventure.jpg" alt="Rafting Adventure">
-            <h1>Welcome to The Rapids</h1>
+            <div class="hero">
+                <img src="images/rafting-adventure.jpg" alt="Rafting Adventure">
+                <h1 class="abs-heading1">Wecome to The Rapids</h1>
+            </div>
         </section>
 
         <section class="newsletter">
@@ -67,7 +69,7 @@
             <span id="demo">2024</span>
             The Rapids | Jacquelyn Kulmus
         </p>
-        <a href="images/" class="footer-menu">View Wireframe</a></p>
+        <a href="images/index.webp" class="footer-menu">View Wireframe</a>
         <nav class="sociallinks">
             <a href="https://facebook.com"><img src="images/facebook.png" alt="Facebook"></a>
             <a href="https://twitter.com"><img src="images/twitter.png" alt="Twitter"></a>
