--- a/wwr/about.html
+++ b/wwr/about.html
@@ -27,21 +27,18 @@
             <article class="abs-article">
                 <img src="images/hero-article.png" alt="happy client">
                 <p>
-                    "Hief ienifni idsi tidf i filkjsj kjhgdj
-                    hddf kjyui fghdd sgfuj hkjuk hjghgd."
+                    "Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
                 </p>
             </article>
         </div>
         <section class="history">
             <h2>History</h2>
             <p>
-                "kljfdkld djkfjl jfiel n fowenlk dkjh hwuhej jdfhk.
-                dhwj kjsdf owjdhts skjthn skjdf."
+                "Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
             </p>
             <img src="images/history.jpg" alt="History">
             <p>
-                "kjdfh e jwknkjf kjdfw kjbs ejktkksb. asjkfhejht skjd skjeb
-                sdjfh.dh fjdhs fhskje siej ksjethhs."
+                "Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
             </p>
         </section>
         <section class="adventures">
