--- a/wwr/index.html
+++ b/wwr/index.html
@@ -69,7 +69,7 @@
             <span id="demo">2024</span>
             The Rapids | Jacquelyn Kulmus
         </p>
-        <a href="images/index.webp" class="footer-menu">View Wireframe</a>
+        <a href="images/home.webp" class="footer-menu">View Wireframe</a>
         <nav class="sociallinks">
             <a href="https://facebook.com"><img src="images/facebook.png" alt="Facebook"></a>
             <a href="https://twitter.com"><img src="images/twitter.png" alt="Twitter"></a>
